--- a/EU-road-kills .ipynb
+++ b/EU-road-kills .ipynb
@@ -839,7 +839,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Question 1. How do road kills change over the course of 1999-2018?</font> \\\n",
+    "### Question 1. How do road kills change over the course of 1999-2018?\n",
     "For this question I analyzed total annual road kills versus times."
    ]
   },
@@ -881,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"5\"> Question 2. Which categories of transport are most commonly involved in the deadly accidents?</font>"
+    "### Question 2. Which categories of transport are most commonly involved in the deadly accidents?"
    ]
   },
   {
@@ -1049,7 +1049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Question 3. Which of these transport categories have experienced the biggest reduction in deaths?</font>"
+    "### Question 3. Which of these transport categories have experienced the biggest reduction in deaths?"
    ]
   },
   {
@@ -1116,7 +1116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Question 4. Which top 10 countries have improved the most in reducing the road kills?<font>"
+    "### Question 4. Which top 10 countries have improved the most in reducing the road kills?"
    ]
   },
   {
@@ -1169,7 +1169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Question 5. Was reduction in deaths gradual process or there was a particular year when number of road kills dropped?<font>"
+    "### Question 5. Was reduction in deaths gradual process or there was a particular year when number of road kills dropped?"
    ]
   },
   {
